--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <script defer src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='js/home.js') }}"></script>
     <link href="https://fonts.googleapis.com/css?family=Salsa" rel="stylesheet">
 </head>
 <body>
@@ -17,14 +17,14 @@
             <a href="{{ url_for('project') }}"><button class="btn-project">Projects</button></a>
         </div>
         <div class="images-div">
-            <a href="https://linkedin.com/in/nahom-araya-071603228">
+            <a href="https://linkedin.com/in/nahom-araya-071603228" target="_blank">
                 <img id="linkPic" src="/static/img/linkerdln.png">
             </a>
-            <a href="https://github.com/Nahom96">
+            <a href="https://github.com/Nahom96" target="_blank">
                 <img id="GitPic" src="/static/img/github.png">
             </a>
-            <a href="mailto:Arayanahom475@gmail.com">
-            <img id="EmailPic" src="/static/img/mail.png">
+            <a href="mailto:Arayanahom475@gmail.com" target="_blank">
+                <img id="EmailPic" src="/static/img/mail.png">
             </a>
         </div>
     </div>
